@@ -155,7 +155,6 @@ $ophandler['object']['ipv4']['updIPv4Allocation'] = 'updIPv4Allocation';
 $ophandler['object']['ipv4']['addIPv4Allocation'] = 'addIPv4Allocation';
 $ophandler['object']['ipv4']['delIPv4Allocation'] = 'delIPv4Allocation';
 $ophandler['object']['edit']['clearSticker'] = 'clearSticker';
-$ophandler['object']['edit']['updateStickers'] = 'updateStickers';
 $ophandler['object']['edit']['update'] = 'updateObject';
 $ophandler['object']['nat4']['addNATv4Rule'] = 'addPortForwarding';
 $ophandler['object']['nat4']['delNATv4Rule'] = 'delPortForwarding';
@@ -207,8 +206,6 @@ $msgcode['object']['edit']['clearSticker']['OK'] = 15;
 $msgcode['object']['edit']['clearSticker']['ERR'] = 120;
 $msgcode['object']['edit']['update']['OK'] = 16;
 $msgcode['object']['edit']['update']['ERR'] = 121;
-$msgcode['object']['edit']['updateStickers']['OK'] = 17;
-$msgcode['object']['edit']['updateStickers']['ERR'] = 122;
 $msgcode['object']['editrspvs']['addLB']['OK'] = 18;
 $msgcode['object']['editrspvs']['addLB']['ERR'] = 137;
 $msgcode['object']['editrspvs']['delLB']['OK'] = 19;
